[package]
name = "rgb-strict-types"
description = "Strict types: confined generalized algebraic data types (GADT)"
version = "1.0.0"
authors = ["Zoe Faltibà <zoefaltiba@gmail.com>"]
repository = "https://github.com/rgb-protocol/rgb-strict-types"
license = "Apache-2.0"
keywords = ["encoding", "rgb-strict-encoding", "gadt"]
categories = ["compilers", "parser-implementations", "mathematics", "science", "data-structures"]
edition = "2021"
rust-version = "1.82.0"
readme = "README.md"
exclude = [".github"]

[lib]
name = "strict_types"

[[bin]]
name = "std-stl"
required-features = ["stl"]

[[bin]]
name = "strict-stl"
required-features = ["stl"]

[[test]]
name = "reflect"
required-features = ["stl"]

[dependencies]
amplify = "=4.8.1"
rgb-ascii-armor = { version = "1.0.0", optional = true }
baid64 = "=0.4.1"
rgb-strict-encoding = { version = "~1.0.0", features = [
    "bitcoin",
] }
indexmap = "2.6.0"
sha2 = "0.10.8"
serde = { version = "1", optional = true }
serde_json = { version = "1.0", optional = true }
serde_yaml = { version = "0.9", optional = true }
toml = { version = "0.8.19", optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
rand = { version = "0.8.4", optional = true }
getrandom = { version = "0.2", features = ["js"], optional = true }

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
wasm-bindgen-test = "0.3"

[features]
default = []
all = [
    "armor",
    "stl",
    "serde",
]
armor = [
    "rgb-ascii-armor",
]
stl = [
    "armor",
]
serde = [
    "dep:serde",
    "serde_json", "serde_yaml", "toml",
    "amplify/serde", "rgb-strict-encoding/serde",
    "indexmap/serde"
]

[package.metadata.docs.rs]
all-features = true
rustc-args = ["--cfg", "docsrs"]

[patch.crates-io]
rgb-strict-encoding = { git = "https://github.com/rgb-protocol/rgb-strict-encoding", branch = "master" }
rgb-ascii-armor = { git = "https://github.com/rgb-protocol/rgb-ascii-armor", branch = "master" }
